# SimpleNavigator

./: .gitignore  CMakeLists.txt  README.MD  README.md  README_RUS (3).md  todo
app_interfaces/graphical_interface/: CMakeLists.txt  app_runner.cc
app_interfaces/graphical_interface/include/: forces_helpers.h  graph_visualizer.h  helpers.h  interaction_panel.h  interface.h
app_interfaces/graphical_interface/source/: graph_visualizer.cc  graph_visualizer_drawer.cc  graph_visualizer_slots.cc  interaction_panel.cc  interface.cc  main_window.cc
app_interfaces/graphical_interface/ui/: interaction_panel.ui
applications/graphical_interface/: CMakeLists.txt  app_runner.cc  todo
applications/graphical_interface/include/: graph_visualizer.h  helpers.h  interaction_panel.h  main_window.h
applications/graphical_interface/source/: graph_visualizer_drawer.cc  graph_visualizer_slots.cc  interaction_panel.cc  main_window.cc
applications/graphical_interface/static/: resources.qrc  style.qss
applications/graphical_interface/ui/: interaction_panel.ui  main_window.ui
graph_lib/: CMakeLists.txt  todo
graph_lib/include/: s21_graph.h  s21_graph_algorithms.h
graph_lib/libs/: queue.h
graph_lib/source/graph/: graph_file_manager.cc
graph_lib/source/graph_algorithms/: bfs_dfc.cc  helpers.cc  minimum_spanning_tree.cc  shortest_paths.cc  traveling_salesman_problem.cc
graph_lib/utils/: ant_colony_optimization.cc  ant_colony_optimization.h
materials/examples/: graph_1.txt  graph_2.txt  graph_3.txt
src/: CMakeLists.txt  main.cc  todo
src/app_interfaces/graphical_interface/: CMakeLists.txt  app_runner.cc
src/app_interfaces/graphical_interface/include/: graph_visualizer.h  interaction_panel.h
src/app_interfaces/graphical_interface/source/: graph_visualizer.cc  interaction_panel.cc
src/app_interfaces/graphical_interface/ui/: graphical_interface.ui  interaction_panel.ui
src/console_interface/: console_interface.cc  console_interface.h
src/graph/: s21_graph.cc  s21_graph.h
src/graph_algorithms/: s21_graph_algorithms.cc  s21_graph_algorithms.h  s21_graph_algorithms_utils.cc
src/graph_algorithms/include/: s21_graph_algorithms.h
src/graph_algorithms/source/: ant_algorithm.cc  helpers.cc  minimum_spanning_tree.cc  s21_graph_algorithms.cc  shortest_paths.cc
src/graph_interface/: main.cpp  mainwindow.cpp
src/graph_lib/include/: s21_graph.h  s21_graph_algorithms.h
src/graph_lib/source/graph/: graph_file_manager.cc
src/graph_lib/source/graph_algorithms/: bfs_dfc.cc  shortest_paths.cc
src/graph_lib/utils/: ant_colony_optimization.h
src/graphical_interface/: CMakeLists.txt  app_runner.cc
src/graphical_interface/include/: graph_visualizer.h  graphical_interface.h  interaction_panel.h
src/graphical_interface/source/: graph_visualizer.cc  graphical_interface.cc  interaction_panel.cc
src/graphical_interface/ui/: graph_visualizer.ui  interaction_panel.ui
src/include/: s21_graph.h
src/include/graph/: s21_graph.cc  s21_graph.h
src/include/graph_algorithms/: s21_graph_algorithms.cc  s21_graph_algorithms.h
src/include/list/: s21_list.h
src/include/matrix/: s21_matrix_oop.cpp  s21_matrix_oop.h
src/include/stack/: s21_stack.cc
src/libs/: matrix.h  queue.h  stack.h
src/source/graph_algorithms/: bfs_dfc.cc  minimum_spanning_tree.cc
src/temp/: 1.cpp  2.cpp
src/tests/: graph_algorithms_test.cc  graph_test.cc  test_runner.cc
src/utils/: ant_colony.cc  ant_colony.h  ant_colony_optimization.cc  ant_colony_optimization.h  s21_list.hpp  s21_matrix.hpp  s21_queue.hpp  s21_stack.hpp
temp/: 1.cpp  2.h
tests/: graph_algorithms_test.cc
